name:                heyefi
version:             0.1.0.0
synopsis:            A server for Eye-Fi SD cards written in Haskell. This project is not endorsed by Eye-Fi Inc.
homepage:            https://github.com/ryantm/heyefi
license:             PublicDomain
license-file:        LICENSE
author:              Ryan Mulligan
maintainer:          ryan@ryantm.com
category:            Network
build-type:          Simple
cabal-version:       >=1.10

executable heyefi
  main-is:             Main.hs
  build-depends:       base
                     , warp
                     , soap
  default-language:    Haskell2010