name:                heyefi
version:             0.1.0.0
synopsis:            A server for Eye-Fi SD cards written in Haskell. This project is not endorsed by Eye-Fi Inc.
homepage:            https://github.com/ryantm/heyefi
license:             PublicDomain
license-file:        LICENSE
author:              Ryan Mulligan
maintainer:          ryan@ryantm.com
category:            Network
build-type:          Simple
cabal-version:       >=1.10

executable heyefi
  default-language:    Haskell2010
  hs-source-dirs:      src
  main-is:             HEyefi/Main.hs
  ghc-options:         -Wall -Werror
  build-depends:       base
                     , stm
                     , unix
                     , MissingH
                     , bytestring
                     , utf8-string
                     , time
                     , iso8601-time
                     , warp
                     , wai
                     , HTTP
                     , http-types
                     , HandsomeSoup
                     , hxt
                     , case-insensitive
                     , old-locale
                     , multipart
                     , tar

test-suite test-heyefi
  default-language: Haskell2010
  type:             exitcode-stdio-1.0
  hs-source-dirs:   test, src
  main-is:          Spec.hs
  ghc-options:      -Wall -Werror
  build-depends:    base
                  , stm
                  , unix
                  , containers
                  , hspec
                  , MissingH
                  , bytestring
                  , utf8-string
                  , time
                  , iso8601-time
                  , warp
                  , wai
                  , HTTP
                  , http-types
                  , HandsomeSoup
                  , hxt
                  , case-insensitive
                  , old-locale
                  , multipart
                  , tar